# workshop-streamlit

./: docker-compose.yml  pyproject.toml
data/: orders.csv
src/consumer/: main.py
src/dashboard/: Dockerfile  app.py
src/producer/: Dockerfile  create_orders.py  main.py
