[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Kaio Silva <kaiohp.silva1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.37.0"
faker = "^26.0.0"
plotly = "^5.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
